--- a/assets/home.css
+++ b/assets/home.css
@@ -284,6 +284,74 @@ ul{
     font-family: var(--header-font);
     font-size: 60px;
 }
+
+/* FOOTER STYLE STARTS*/
+i{
+    font-size: 2.4rem;
+}
+.footer{
+    position: relative;
+    padding-block: 3rem;
+    background-color: #25182f;
+    color: white;
+    font-family: var(--regular-text);
+}
+
+.footer-container{
+    max-width: 116rem;
+    margin: auto;
+    padding: 0 10%;
+    overflow: hidden;
+    resize: horizontal;
+}
+
+.footer-title{
+    font-size: 1.8rem;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+    font-family: var(--header-font);
+}
+
+.footer-list{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.footer-list-item{
+    list-style: none;
+}
+
+.footer-list-link{
+    text-decoration: none;
+    color: white;
+    transition: color 1s;
+}
+
+.footer-list-link:hover{
+    color: var(--first-color);
+}
+
+.footer-divider{
+    margin-block: 2.5rem;
+    border: none;
+    border-top: 1px solid rgba(252, 255, 255, 0.1);
+}
+
+.footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.footer-bottom .footer-list{
+    flex-direction: row;
+}
+/* FOOTER STYLE ENDS*/
+
+
 @media screen and (min-width: 1024px) {
     :root{
         --biggest-font-size: 4rem;
