raw html version

--- a/assets/home.css
+++ b/assets/home.css
@@ -2,19 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@500&display=swap');
 
 :root{
-    --header-height: 3.5rem;
-
     --first-color: #00f7ff;
-    --second-color: hsl(277,56%,68%);
     --text-color: hsl(203,8%,98%);
-    --body-color: hsl(258,20%,18%);
     --header-font: 'Oxanium', cursive;
-    --biggest-font-size: 2.25rem;
-    --h2-font-size: 1.25rem;
-    --normal-font-size: .938rem;
-    --smaller-font-size: .75rem;
-    --font-semi-bold: 600;
-    --z-fixed: 100;
     --regular-text: 'Montserrat';
 }
 
@@ -79,14 +69,18 @@ ul{
     width: 100px;
 }
 
+.home{
+    color: var(--first-color);
+}
+
 .navbar a{
-    text-decoration: none;
-    color: white;
+    color: #fff;
     text-decoration: none;
     font-weight: 500;
     margin-left: 2.5rem;
     font-size: 1.15rem;
 }
+
 
 .navbar a:hover{
     color: var(--first-color);
@@ -109,7 +103,7 @@ ul{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 13rem 10%;
+    padding: 10rem 10%;
     text-align: center;
 }
 .slider-text{
@@ -344,7 +338,7 @@ i{
 .footer-divider{
     margin-block: 2.5rem;
     border: none;
-    border-top: 1px solid rgba(252, 255, 255, 0.1);
+    border-top: 1px solid rgba(83,85,255,0.5);
 }
 
 .footer-bottom{
