--- a/assets/events.css
+++ b/assets/events.css
@@ -43,3 +43,80 @@ section{
     width: 100vw;
     height: 100vh;
 }
+.calendar{
+    width: 100vw;
+    height: 100vh;
+}
+.upcoming-events{
+    margin: 0 10%;
+    width: 100%;
+    height: 100%;
+}
+.events-header{
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 40px;
+    font-family: var(--header-font);
+    text-align: start;
+    margin-bottom: 3rem;
+}
+.upcoming-events{
+    display: flex;
+    flex-direction: column;
+}
+.event{
+    width: 80%;
+    max-height: 20%;
+    margin-bottom: 3%;
+    display: flex;
+    flex-direction: row;
+    
+}
+.event-date{
+    margin-right: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #00f7ff;
+    font-size: 110%;
+    border: 1px solid white;
+    padding: 2%;
+}
+.event-description{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    text-wrap: wrap;
+    font-family: var(--regular-text);
+    border: 1px solid white;
+    padding: 2%;
+}
+
+.event-description > h5{
+    font-weight: 600;
+    font-size: 130%;
+    font-family: var(--header-font);
+    margin-bottom: 1%;
+}
+.event-description > p{
+    margin-bottom: 1%;
+    font-size: 100%;
+}
+.small-description{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.small-description > i{
+    font-size: 100%;
+    margin-right: 2%;
+}
+.small-description > label{
+    margin-right: 5%;
+}
+
+
+
+
