--- a/assets/contacts.css
+++ b/assets/contacts.css
@@ -1,50 +1,62 @@
-main {
-    width: 40rem;
-    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.2);
-    margin: 13rem auto;
-    height: 45rem;
-    border-radius: 2rem;
-    padding: 2rem;
-}
-   
-h1 {
-    text-align: center;
-    font-size: 3rem;
-    padding: 1rem 2rem;
-}
 
 form {
-    margin: 10rem 10%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 2rem;
+    background: transparent;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 500px;
+    width: 100%;
+    height: 600px;
+    box-sizing: border-box;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
-.input__container {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.5rem;
+h2 {
+    font-family: 'Oxanium', sans-serif;
+    color: white;
+    text-align: center;
 }
 
-.input__container label { font-size: 1.6rem; }
+label {
+    color: white;
+    margin-bottom: 1rem;
+    display: block;
 
-.input__container input,
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10%;
+    box-sizing: border-box;
+    border: 1px solid white;
+    border-radius: 5px;
+    background: transparent;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
 textarea {
-    padding: 1rem 2rem;
-    border-radius: 5px;
-    border: 1px solid #555;
-    resize: none;
+    resize: vertical;
+    height: 100px;
 }
 
-button {
-    align-self: flex-start;
-    padding: 1rem 2rem;
-    border-radius: 5px;
-    border: none;
-    background: #333;
-    color: #fff;
-    cursor: pointer;
+button:hover {
+    background-color: #00f7ff;
+    transition: background-color 0.3s;
 }
-form{
-    margin-top: 50rem 10%;
+.contact-container{
+    margin-top: 3rem;
+    padding: 0 10%;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.contact-container h1{
+    text-align: start;
+    font-family: var(--header-font);
+    font-size: 40px;
+    margin-bottom: 3rem;
 }
