--- a/assets/contacts.css
+++ b/assets/contacts.css
@@ -60,3 +60,11 @@ button:hover {
     font-size: 40px;
     margin-bottom: 3rem;
 }
+@media screen and (max-width: 768px) {
+    .contact-container{
+        margin-top: 8rem;
+        padding: 0 10%;
+    
+    }
+    
+}
